--- a/glowing-carnival/src/Home.css
+++ b/glowing-carnival/src/Home.css
@@ -20,3 +20,55 @@
   justify-content: space-evenly;
   flex-direction: row;
 }
+.priceFilter {
+  max-width: 900px;
+  max-height: 300px;
+  margin: 25px;
+  justify-content: space-evenly;
+  flex-direction: row;
+}
+.priceFilterButton {
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 5px;
+  border: 0.5px solid black;
+  border-radius: 10px;
+  max-width: 40px;
+  text-align: center;
+}
+.priceFilterButton:hover {
+  color: #04aa6d;
+}
+.slidecontainer {
+  width: 35%;
+}
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 15px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+  border-radius: 30px;
+}
+.slider:hover {
+  opacity: 1;
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #04aa6d;
+  cursor: pointer;
+}
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #04aa6d;
+  cursor: pointer;
+}
